<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--删除-->
    <item
        android:id="@+id/menu_delete"
        android:icon="@mipmap/menu_trash"
        android:title="@string/menu_delete"
        app:showAsAction="always" />
    <!--复制-->
    <item
        android:id="@+id/menu_copy"
        android:title="@string/menu_copy"
        android:icon="@mipmap/menu_copy"
        app:showAsAction="always" />
    <!-- 剪切-->
    <item
        android:id="@+id/menu_cut"
        android:title="@string/menu_move"
        android:icon="@mipmap/menu_cut"
        app:showAsAction="always" />
    <!--选择全部-->
    <item
        android:id="@+id/menu_select"
        android:title="@string/menu_select_all"
        app:showAsAction="never" />
    <!--清空-->
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"
        app:showAsAction="never" />
    <!--重命名-->
    <item
        android:id="@+id/menu_rename"
        android:title="@string/menu_rename"
        app:showAsAction="never" />
    <!--属性-->
    <item
        android:id="@+id/menu_detail"
        android:title="@string/menu_detail"
        app:showAsAction="never" />
    <!--分享-->
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />

</menu>