<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_select_more"
        android:title="@string/overview_menu_select_more"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_install_all"
        android:icon="@mipmap/ic_menu_search_holo_dark"
        android:title="@string/overview_menu_install_all"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/overview_menu_sort_by"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_style_by"
        android:title="@string/overview_menu_style_list"
        android:visible="false"
        app:showAsAction="never"/>
</menu>